--- a/VRTest1/VRTest1.vcxproj
+++ b/VRTest1/VRTest1.vcxproj
@@ -138,6 +138,7 @@ SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
     <ClCompile Include="Face2.cpp" />
     <ClCompile Include="FaceNode.cpp" />
     <ClCompile Include="FaceStack.cpp" />
+    <ClCompile Include="LightRaySource.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Pos.cpp" />
@@ -147,6 +148,7 @@ SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
     <ClCompile Include="RenderStack.cpp" />
     <ClCompile Include="SDL3DHelper.cpp" />
     <ClCompile Include="Sky.cpp" />
+    <ClCompile Include="Vector3.cpp" />
     <ClCompile Include="Vertex.cpp" />
     <ClCompile Include="Vertex3D.cpp" />
     <ClCompile Include="VertexNode.cpp" />
@@ -162,6 +164,7 @@ SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
     <ClInclude Include="Face2.h" />
     <ClInclude Include="FaceNode.h" />
     <ClInclude Include="FaceStack.h" />
+    <ClInclude Include="LightRaySource.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Pos.h" />
@@ -171,6 +174,7 @@ SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
     <ClInclude Include="RenderStack.h" />
     <ClInclude Include="SDL3DHelper.h" />
     <ClInclude Include="Sky.h" />
+    <ClInclude Include="Vector3.h" />
     <ClInclude Include="Vertex.h" />
     <ClInclude Include="Vertex3D.h" />
     <ClInclude Include="VertexNode.h" />
